# anml-exp

./: .gitignore  Agents.md  CHANGELOG.md  CONTRIBUTING.md  README.md  evaluator.py  leaderboard.py  pyproject.toml  requirements.txt  run_experiments.py
.github/workflows/: ci.yml  reviewer.yml  typing.yml
anomaly_models/: __init__.py  autoencoder.py  base.py  deep_svdd.py  isolation_forest.py  local_outlier_factor.py  matrix_profile.py  one_class_svm.py  pca_detector.py  usad.py
datasets/: registry.py
docs/: README.md  conf.py  index.md
experiments/: toy-blobs.yaml  toy-circles.yaml
results/: results-schema.json
scripts/: validate_results.py
src/anml_exp/: __init__.py  cli.py
src/anml_exp/benchmarks/: evaluator.py  leaderboard.py
src/anml_exp/configs/: imm_tabular.yaml
src/anml_exp/data/: __init__.py  registry.py
src/anml_exp/data/datasets/: README.md
src/anml_exp/models/: __init__.py  autoencoder.py  base.py  deep_svdd.py  imm_tabular.py  isolation_forest.py  local_outlier_factor.py  matrix_profile.py  one_class_svm.py  pca_detector.py  usad.py
src/anml_exp/models/diffusion/: ddad_tabular.py
src/anml_exp/models/score_matching/: __init__.py  gnsm.py
src/anml_exp/registry/: __init__.py
src/anml_exp/resources/: results-schema.json
tests/: __init__.py  test_cli.py  test_datasets.py  test_gnsm.py  test_imm_tabular.py  test_leaderboard.py  test_models.py  test_placeholder.py  test_ranking.py  test_registry.py  test_uv_lock.py
tests/perf/: __init__.py  test_benchmark.py  test_matrix_profile.py  test_ts_baseline.py
