[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anml-exp"
version = "0.0.1"
description = "Anomaly detection experimentation framework"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "jsonschema",
    "hypothesis",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
pandas = ["pandas>=2.0"]
plot = ["matplotlib>=3.9"]
ts = ["stumpy>=1.11"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["."]

